feat: 평균 계산 구현